; ModuleID = '/home/carl/AnghaBench/vlc/src/win32/extr_thread.c_mdate_wall.c'
source_filename = "/home/carl/AnghaBench/vlc/src/win32/extr_thread.c_mdate_wall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_5__ = type { i32, i32, i32 }

@CLOCK_FREQ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Broken frequencies ratio\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @mdate_wall to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mdate_wall() #0 {
  %1 = alloca %struct.TYPE_6__, align 4
  %2 = alloca %struct.TYPE_5__, align 4
  %3 = call i32 @GetSystemTimePreciseAsFileTime(%struct.TYPE_6__* %1)
  %4 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 2
  store i32 %5, i32* %6, align 4
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 1
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* @CLOCK_FREQ, align 4
  %11 = srem i32 10000000, %10
  %12 = icmp eq i32 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @static_assert(i32 %13, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @VLC_TICK_FROM_MSFTIME(i32 %16)
  ret i32 %17
}

declare dso_local i32 @GetSystemTimePreciseAsFileTime(%struct.TYPE_6__*) #1

declare dso_local i32 @static_assert(i32, i8*) #1

declare dso_local i32 @VLC_TICK_FROM_MSFTIME(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
